// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminDebate /> should render correctly 1`] = `
<ForwardRef
  direction="column"
>
  <Accordion
    defaultAccordion="face-to-face"
    spacing={2}
  >
    <AccordionItem
      id="face-to-face"
    >
      <AccordionButton>
        <FormattedMessage
          id="the.face-to-face"
          values={Object {}}
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(FaceToFace)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
    <AccordionItem
      id="argument"
    >
      <AccordionButton>
        <FormattedMessage
          id="argument-count"
          values={
            Object {
              "count": 3,
            }
          }
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(ArgumentTab)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
    <AccordionItem
      id="vote"
    >
      <AccordionButton>
        <FormattedMessage
          id="votes-count"
          values={
            Object {
              "num": 1,
            }
          }
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(VoteTab)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
  </Accordion>
</ForwardRef>
`;

exports[`<ProjectAdminDebate /> should render correctly with contributions step 1`] = `
<ForwardRef
  direction="column"
>
  <Button
    leftIcon="LONG_ARROW_LEFT"
    mb={8}
    onClick={[Function]}
    size="small"
    variant="tertiary"
  >
    <FormattedMessage
      id="global.steps"
      values={Object {}}
    />
  </Button>
  <Accordion
    defaultAccordion="face-to-face"
    spacing={2}
  >
    <AccordionItem
      id="face-to-face"
    >
      <AccordionButton>
        <FormattedMessage
          id="the.face-to-face"
          values={Object {}}
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(FaceToFace)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
    <AccordionItem
      id="argument"
    >
      <AccordionButton>
        <FormattedMessage
          id="argument-count"
          values={
            Object {
              "count": 3,
            }
          }
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(ArgumentTab)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
    <AccordionItem
      id="vote"
    >
      <AccordionButton>
        <FormattedMessage
          id="votes-count"
          values={
            Object {
              "num": 1,
            }
          }
        />
      </AccordionButton>
      <AccordionPanel>
        <Relay(VoteTab)
          debate={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "argumentsPublished": Object {
                "totalCount": 1,
              },
              "argumentsTrashed": Object {
                "totalCount": 1,
              },
              "argumentsWaiting": Object {
                "totalCount": 1,
              },
              "votes": Object {
                "totalCount": 1,
              },
            }
          }
        />
      </AccordionPanel>
    </AccordionItem>
  </Accordion>
</ForwardRef>
`;
